# pcb-forge

./: .gitignore  Cargo.toml
.claude/skills/: pcb-forge.md
examples/: gateway.toml  manual-placement.toml
src/: bom.rs  footprint.rs  gerber.rs  lib.rs  main.rs  parser.rs  pcb.rs  router.rs  schema.rs  schematic.rs  topola_router.rs  viewer.rs
src/ui/: api.rs  frontend.rs  mod.rs  server.rs
